# splicing

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  splicing.files  splicing.pro
example/: Makefile  README.md  foo.cpp  init.cpp
headers/: api.hpp  errors.hpp  jump.hpp  memory_permissions.hpp
headers/tools/: c++11.hpp  endian.hpp  keywords_override_protection.hpp  static_initialization.hpp
include/: api.hpp  memory_permissions.hpp
include/tools/: spin_lock.hpp
sources/: api.cpp  errors.cpp  lib.cpp  lib.hpp  memory_permissions.cpp
tests/: CMakeLists.txt  Makefile  main.cpp
tools/: c++11.hpp  endian.hpp  static_initialization.hpp
